# research-paper-rag

./: CHANGELOG.md  commitlint.config.js  main.py  package.json  pnpm-lock.yaml  pyproject.toml  rag.py  schema.py
.github/workflows/: bandit.yml  clickup.yml  commitlint.yml  ruff.yml  semantic_release.yml
rag/: RAG.ipynb
rag/.ipynb_checkpoints/: Research paper RAG-checkpoint.ipynb
