[project]
name = "research-paper-rag"
version = "0.0.0"
description = "RAG pipeline using LangChain"
readme = "README.md"
requires-python = ">=3.11,<3.15"
authors = [{ name = "Boon Yin Yin" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-pinecone",
    "langchain-text-splitters",
    "huggingface-hub",
    "sentence-transformers",
    "pinecone",
    "pymupdf",
    "python-dotenv",
]

[dependency-groups]
lint = [
    "bandit~=1.9.4",
    "ruff~=0.14.14",
]

[tool.ruff]
required-version = ">=0.14.14"
output-format = "concise"
show-fixes = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "_build",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "data",
    "*.ipynb",
]
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "FBT001",
    "FBT002",
    "PLR0913",
    "TC001",
    "TC002",
    "TC003",
    "SLF001",
    "FA102",
    "FA100",
    "PTH",
    "ISC001",
    "COM812",
    "D205",
    "BLE001",
    "C901",
    "D107",
    "PLR2004",
    "PLR0912",
    "PLR0915",
    "G004",
]
extend-select = ["I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
